# sagittal_average

./: CITATION.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/sagittal_average/: command.py  sagittal_brain.py
tests/: test_sagittal_brain.py
